--- a/Test.ipynb
+++ b/Test.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6390e2e3",
+   "id": "5152f7cb",
    "metadata": {},
    "source": [
     "2. A quoi sert la commande `git diff`?"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "571351e2",
+   "id": "c83c8bac",
    "metadata": {},
    "source": [
     "### Partie II\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "885bd143",
+   "id": "0bfa5a88",
    "metadata": {},
    "source": [
     "1. C'est quoi `CORS`?"
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6dfe6e6",
+   "id": "1febb3b7",
    "metadata": {},
    "source": [
     "2. C'est quoi la différence entre `==` et `===`"
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12e100ee",
+   "id": "dbdbebc8",
    "metadata": {},
    "source": [
     "3. Qu'est ce que return `if ( \"0\" == \"true\" )`\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdc285a0",
+   "id": "d94c1a7b",
    "metadata": {},
    "source": [
     "4. Qu'est ce que `this`?"
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2903a5bf",
+   "id": "b18b5771",
    "metadata": {},
    "source": [
     "### Partie II\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ed17db8",
+   "id": "2d34d367",
    "metadata": {},
    "source": [
     "1. Expliquez la différence entre le comportement de `inline` et `block`"
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96eee6df",
+   "id": "69c0fd76",
    "metadata": {},
    "source": [
     "2. Est-il possible de créer un site web responsive sans media queries ?"
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5b79c6d",
+   "id": "7bb4bf49",
    "metadata": {},
    "source": [
     "3. Expliquez les avantages/inconvénients de l'utilisation d'éléments `inline-block`, `flex` ou `float`."
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95b5d10d",
+   "id": "7f6045e8",
    "metadata": {},
    "source": [
     "### Partie II\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6576026c",
+   "id": "d4fc1109",
    "metadata": {},
    "source": [
     "1. Écrivez un programme qui imprimera des nombres de 1 à 100, avec les conditions suivantes :\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2eaa7c9",
+   "id": "9a476e69",
    "metadata": {},
    "source": [
     "2. Ecrire une fonction qui vérifie si paramètre est en fait un nombre premier. \n",
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5737670",
+   "id": "67d9f478",
    "metadata": {},
    "source": [
     "3. Que signifie\n",
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9cc2c9c",
+   "id": "f4a42f19",
    "metadata": {},
    "source": [
     "### Partie II\n",
@@ -227,7 +227,7 @@
     "Pour la table users ci-dessous `(voir employee.sql)`\n",
     "   1. extraire le nombre d'employés par jour s'étant inscrit \n",
     "   2. extraire les employés ayant fait l'inscription le `3/10/2021`\n",
-    "   3. extraire les employés ayant un prenom qui commence par les lettres `t` ou `g` et qui finissent par un chiffre\n",
+    "   3. extraire les employés ayant un email qui commence par `consonne` et qui a un chiffre avant le `@`\n",
     "   4. mettre first_name et last_name en `lowercase`\n",
     "   5. modifier la column `create_at` par `date_creation`\n",
     "   6. c'est quoi la differnce entre `delete` et `truncate`\n"
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a21a82c1",
+   "id": "594644fb",
    "metadata": {},
    "source": [
     "imprimer la liste des employés qui ont un salaire plus que la somme de deux salaires minimum"
@@ -282,9 +282,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3296df5f",
+   "metadata": {},
+   "source": [
+    "### Partie III\n",
+    "#### Pratique"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88d935b4",
+   "metadata": {},
+   "source": [
+    "- mobile: voir video\n",
+    "- web: voir XD file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "299337dc",
+   "id": "c9c54575",
    "metadata": {},
    "outputs": [],
    "source": []
