--- a/Test.ipynb
+++ b/Test.ipynb
@@ -15,8 +15,8 @@
    "id": "afc459c9",
    "metadata": {},
    "source": [
-    "### Partie I\n",
-    "#### Informations générales"
+    "## Partie I\n",
+    "### Informations générales"
    ]
   },
   {
@@ -63,8 +63,8 @@
    "id": "199242f5",
    "metadata": {},
    "source": [
-    "### Partie II\n",
-    "#### Questions Générales"
+    "## Partie II\n",
+    "### Questions Générales"
    ]
   },
   {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5152f7cb",
+   "id": "6981eb8b",
    "metadata": {},
    "source": [
     "2. A quoi sert la commande `git diff`?"
@@ -89,16 +89,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c83c8bac",
+   "id": "90623434",
    "metadata": {},
    "source": [
-    "### Partie II\n",
-    "#### Javascript"
+    "### Javascript"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0bfa5a88",
+   "id": "a353e13b",
    "metadata": {},
    "source": [
     "1. C'est quoi `CORS`?"
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1febb3b7",
+   "id": "41c42561",
    "metadata": {},
    "source": [
     "2. C'est quoi la différence entre `==` et `===`"
@@ -114,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbdbebc8",
+   "id": "1f54eab7",
    "metadata": {},
    "source": [
     "3. Qu'est ce que return `if ( \"0\" == \"true\" )`\n",
@@ -126,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d94c1a7b",
+   "id": "98d3604a",
    "metadata": {},
    "source": [
     "4. Qu'est ce que `this`?"
@@ -134,16 +133,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b18b5771",
+   "id": "1c938880",
    "metadata": {},
    "source": [
-    "### Partie II\n",
-    "#### CSS"
+    "### CSS"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2d34d367",
+   "id": "faa42924",
    "metadata": {},
    "source": [
     "1. Expliquez la différence entre le comportement de `inline` et `block`"
@@ -151,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69c0fd76",
+   "id": "ec43d237",
    "metadata": {},
    "source": [
     "2. Est-il possible de créer un site web responsive sans media queries ?"
@@ -159,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bb4bf49",
+   "id": "4cb4f821",
    "metadata": {},
    "source": [
     "3. Expliquez les avantages/inconvénients de l'utilisation d'éléments `inline-block`, `flex` ou `float`."
@@ -167,16 +165,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f6045e8",
+   "id": "6e0022a1",
    "metadata": {},
    "source": [
-    "### Partie II\n",
-    "#### PHP"
+    "### PHP"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d4fc1109",
+   "id": "f2827685",
    "metadata": {},
    "source": [
     "1. Écrivez un programme qui imprimera des nombres de 1 à 100, avec les conditions suivantes :\n",
@@ -187,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a476e69",
+   "id": "1f7e3fd5",
    "metadata": {},
    "source": [
     "2. Ecrire une fonction qui vérifie si paramètre est en fait un nombre premier. \n",
@@ -196,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67d9f478",
+   "id": "57096691",
    "metadata": {},
    "source": [
     "3. Que signifie\n",
@@ -212,11 +209,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4a42f19",
+   "id": "7f6793a1",
    "metadata": {},
    "source": [
-    "### Partie II\n",
-    "#### DATABASE"
+    "### DATABASE"
    ]
   },
   {
@@ -224,21 +220,14 @@
    "id": "c18def64",
    "metadata": {},
    "source": [
-    "Pour la table users ci-dessous `(voir employee.sql)`\n",
+    "Pour la table employee ci-dessous `(voir employee.sql)`\n",
     "   1. extraire le nombre d'employés par jour s'étant inscrit \n",
     "   2. extraire les employés ayant fait l'inscription le `3/10/2021`\n",
     "   3. extraire les employés ayant un email qui commence par `consonne` et qui a un chiffre avant le `@`\n",
     "   4. mettre first_name et last_name en `lowercase`\n",
     "   5. modifier la column `create_at` par `date_creation`\n",
-    "   6. c'est quoi la differnce entre `delete` et `truncate`\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "594644fb",
-   "metadata": {},
-   "source": [
-    "imprimer la liste des employés qui ont un salaire plus que la somme de deux salaires minimum"
+    "   6. c'est quoi la differnce entre `delete` et `truncate`\n",
+    "   7. imprimer la liste des employés qui ont un salaire plus que la somme de deux salaires minimum"
    ]
   },
   {
@@ -283,16 +272,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3296df5f",
+   "id": "08350c78",
    "metadata": {},
    "source": [
-    "### Partie III\n",
-    "#### Pratique"
+    "## Partie III\n",
+    "### Pratique"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "88d935b4",
+   "id": "c2fc7e0b",
    "metadata": {},
    "source": [
     "- mobile: voir video\n",
@@ -302,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9c54575",
+   "id": "cc347c09",
    "metadata": {},
    "outputs": [],
    "source": []
