--- a/Test.ipynb
+++ b/Test.ipynb
@@ -24,7 +24,15 @@
    "id": "fce0ebad",
    "metadata": {},
    "source": [
-    "1. Nom et prénom"
+    "1. Nom et prénom <input style=\"width: 250px\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfd989bd",
+   "metadata": {},
+   "source": [
+    "2. Vous habitez à <input  style=\"width: 250px\"  />"
    ]
   },
   {
@@ -32,11 +40,11 @@
    "id": "a130e113",
    "metadata": {},
    "source": [
-    "2. Actuallement vous\n",
-    "    1. Travaillez\n",
-    "    2. Etudiez\n",
-    "    3. Etes en Stage\n",
-    "    4. En recherche active"
+    "3. Actuallement vous\n",
+    "    1. [ ] Travaillez\n",
+    "    2. [ ] Etudiez\n",
+    "    3. [ ] Etes en Stage\n",
+    "    4. [ ] En recherche active"
    ]
   },
   {
@@ -44,10 +52,10 @@
    "id": "7d35753b",
    "metadata": {},
    "source": [
-    "3. Vous voulez travailler en tant que\n",
-    "    1. developpeur frontend\n",
-    "    2. developpeur backend\n",
-    "    3. developpeur mobile"
+    "4. Vous voulez travailler en tant que\n",
+    "    1. [ ] developpeur frontend\n",
+    "    2. [ ] developpeur backend\n",
+    "    3. [ ] developpeur mobile"
    ]
   },
   {
@@ -55,7 +63,12 @@
    "id": "40013554",
    "metadata": {},
    "source": [
-    "4. combien d'année d'expérience avez-vous?"
+    "5. combien d'année d'expérience avez-vous?\n",
+    "    1. [ ] < 1 an\n",
+    "    2. [ ] < 2 ans\n",
+    "    3. [ ] < 5 ans\n",
+    "    4. [ ] \\> 5 ans\n",
+    " "
    ]
   },
   {
@@ -72,19 +85,17 @@
    "id": "15fae605",
    "metadata": {},
    "source": [
-    "1. C'est quoi \n",
-    "    1. Git? \n",
-    "    2. Sass? \n",
-    "    3. Composer? \n",
-    "    4. Object Pool Pattern (Design Patterns)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6981eb8b",
-   "metadata": {},
-   "source": [
-    "2. A quoi sert la commande `git diff`?"
+    "\n",
+    "1. C'est quoi Git? \n",
+    "> \n",
+    "2. C'est quoi Sass? \n",
+    "> \n",
+    "3. C'est quoi Composer? \n",
+    "> \n",
+    "4. C'est quoi `Object Pool Pattern` (Design Patterns)\n",
+    "> \n",
+    "5. A quoi sert la commande `git diff`?\n",
+    ">"
    ]
   },
   {
@@ -100,35 +111,17 @@
    "id": "a353e13b",
    "metadata": {},
    "source": [
-    "1. C'est quoi `CORS`?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "41c42561",
-   "metadata": {},
-   "source": [
-    "2. C'est quoi la différence entre `==` et `===`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1f54eab7",
-   "metadata": {},
-   "source": [
+    "1. C'est quoi `CORS`?\n",
+    ">\n",
+    "2. C'est quoi la différence entre `==` et `===`\n",
+    ">\n",
     "3. Qu'est ce que return `if ( \"0\" == \"true\" )`\n",
-    "    1. 0\n",
-    "    2. \"0\"\n",
-    "    3. NULL\n",
-    "    4. false"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "98d3604a",
-   "metadata": {},
-   "source": [
-    "4. Qu'est ce que `this`?"
+    "    1. [ ] 0\n",
+    "    2. [ ] \"0\"\n",
+    "    3. [ ] NULL\n",
+    "    4. [ ] false\n",
+    "4. Qu'est ce que `this`?\n",
+    ">"
    ]
   },
   {
@@ -144,23 +137,12 @@
    "id": "faa42924",
    "metadata": {},
    "source": [
-    "1. Expliquez la différence entre le comportement de `inline` et `block`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ec43d237",
-   "metadata": {},
-   "source": [
-    "2. Est-il possible de créer un site web responsive sans media queries ?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4cb4f821",
-   "metadata": {},
-   "source": [
-    "3. Expliquez les avantages/inconvénients de l'utilisation d'éléments `inline-block`, `flex` ou `float`."
+    "1. Expliquez la différence entre le comportement de `inline` et `block`\n",
+    ">\n",
+    "2. Est-il possible de créer un site web responsive sans media queries ?\n",
+    ">\n",
+    "3. Expliquez les avantages/inconvénients de l'utilisation d'éléments `inline-block`, `flex` ou `float`.\n",
+    ">"
    ]
   },
   {
@@ -179,23 +161,11 @@
     "1. Écrivez un programme qui imprimera des nombres de 1 à 100, avec les conditions suivantes :\n",
     "    1. A la place de chaque nombre qui peut être divisé par 3, le programme imprimera Dev.\n",
     "    2. A la place de chaque nombre divisible par 5, le programme imprimera Ops.\n",
-    "    3. A la place de chaque nombre divisible par 3 et 5, le programme imprimera DevOps."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1f7e3fd5",
-   "metadata": {},
-   "source": [
+    "    3. A la place de chaque nombre divisible par 3 et 5, le programme imprimera DevOps.\n",
+    "    >\n",
     "2. Ecrire une fonction qui vérifie si paramètre est en fait un nombre premier. \n",
-    "`echo isPrime(73) ? 'Prime' : 'Composite';`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "57096691",
-   "metadata": {},
-   "source": [
+    "`echo isPrime(73) ? 'Prime' : 'Composite';`\n",
+    ">\n",
     "3. Que signifie\n",
     "```\n",
     "    <?php\n",
@@ -204,7 +174,8 @@
     "            $item = ($item >= 0)? $item : pow($item, 2);\n",
     "        endforeach;\n",
     "        print_r($array);\n",
-    "```"
+    "```\n",
+    ">"
    ]
   },
   {
@@ -276,22 +247,41 @@
    "metadata": {},
    "source": [
     "## Partie III\n",
-    "### Pratique"
+    "#### Pratique (web developper)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5559a228",
+   "metadata": {},
+   "source": [
+    "- Créer une page web sur la base du design (voir le fichier `web.xd`)\n",
+    "- En ouvrant les collapses, chaque point se déplace vers son paragraphe "
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "4efbd581",
+   "metadata": {},
+   "source": [
+    "#### Pratique (Mobile developper)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "c2fc7e0b",
    "metadata": {},
    "source": [
-    "- mobile: voir video\n",
-    "- web: voir XD file"
+    "- Consultez la vidéo et les images ci-jointes et créer un réplica de l'application mobile (technologie souhaité)\n",
+    "- Note : vous devez envoyer une vidéo du résultat de votre travail avec le code source \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc347c09",
+   "id": "184297b9",
    "metadata": {},
    "outputs": [],
    "source": []
