Add solution of test and create folder web-page which in it a solution of web part

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -24,7 +24,8 @@
    "id": "fce0ebad",
    "metadata": {},
    "source": [
-    "1. Nom et prénom <input style=\"width: 250px\" />"
+    "1. Nom et prénom <input style=\"width: 250px\" />\n",
+    "Youssef Sakini"
    ]
   },
   {
@@ -32,7 +33,8 @@
    "id": "dfd989bd",
    "metadata": {},
    "source": [
-    "2. Vous habitez à <input  style=\"width: 250px\"  />"
+    "2. Vous habitez à <input  style=\"width: 250px\"  />\n",
+    "42 BLOC 19 Sidi Othmane, Casablanca\n"
    ]
   },
   {
@@ -44,7 +46,7 @@
     "    1. [ ] Travaillez\n",
     "    2. [ ] Etudiez\n",
     "    3. [ ] Etes en Stage\n",
-    "    4. [ ] En recherche active"
+    "    4. [*] En recherche active"
    ]
   },
   {
@@ -53,7 +55,7 @@
    "metadata": {},
    "source": [
     "4. Vous voulez travailler en tant que\n",
-    "    1. [ ] developpeur frontend\n",
+    "    1. [*] developpeur frontend\n",
     "    2. [ ] developpeur backend\n",
     "    3. [ ] developpeur mobile"
    ]
@@ -65,7 +67,7 @@
    "source": [
     "5. combien d'année d'expérience avez-vous?\n",
     "    1. [ ] < 1 an\n",
-    "    2. [ ] < 2 ans\n",
+    "    2. [*] < 2 ans\n",
     "    3. [ ] < 5 ans\n",
     "    4. [ ] \\> 5 ans\n",
     " "
@@ -87,15 +89,15 @@
    "source": [
     "\n",
     "1. C'est quoi Git? \n",
-    "> \n",
+    "> Git est un logiciel de gestion de versions open source.\n",
     "2. C'est quoi Sass? \n",
-    "> \n",
+    "> Sass est langage de script préprocesseur qui est compilé en Css.\n",
     "3. C'est quoi Composer? \n",
-    "> \n",
+    "> Composer est un logiciel qui permet à ses utilisateurs de déclarer et d'installer les bibliothèques dont le projet principal a besoin.\n",
     "4. C'est quoi `Object Pool Pattern` (Design Patterns)\n",
-    "> \n",
+    "> `Object Pool Pattern` est un modèle de conception de création logicielle qui utilise un ensemble d'objets initialisés prêts à l'emploi - un \"pool\" - plutôt que de les allouer et de les détruire à la demande.\n",
     "5. A quoi sert la commande `git diff`?\n",
-    ">"
+    ">La commande `git diff` sert a afficher les modifications entre l’arbre de travail et l’index ou un arbre, les modifications entre l’index et un arbre, les modifications entre deux arbres, les modifications résultant d’une fusion, les modifications entre deux objets blobs ou les modifications entre deux fichiers sur disque"
    ]
   },
   {
@@ -112,16 +114,16 @@
    "metadata": {},
    "source": [
     "1. C'est quoi `CORS`?\n",
-    ">\n",
+    ">Le `CORS` permet de prendre en charge des requêtes multi-origines sécurisées et des transferts de données entre des navigateurs et des serveurs web pour aider à réduire les risques de requêtes HTTP multi-origines.\n",
     "2. C'est quoi la différence entre `==` et `===`\n",
-    ">\n",
+    ">En utilisent `==` pour l'égalité de valeur et non pas le type, par contre `===` c'est pour l'égalité de type et de valeur par exemple (string num === '23' ici la valeur de num doit être obligatoirement de type string).\n",
     "3. Qu'est ce que return `if ( \"0\" == \"true\" )`\n",
     "    1. [ ] 0\n",
     "    2. [ ] \"0\"\n",
     "    3. [ ] NULL\n",
-    "    4. [ ] false\n",
+    "    4. [*] false\n",
     "4. Qu'est ce que `this`?\n",
-    ">"
+    ">Le mot-clé `this` fait référence à différents objets selon la façon dont il est utilisé."
    ]
   },
   {
@@ -138,11 +140,14 @@
    "metadata": {},
    "source": [
     "1. Expliquez la différence entre le comportement de `inline` et `block`\n",
-    ">\n",
+    ">Le comportement inline ne nous permets pas a utiliser un height,width ou le margin vertical.\n",
+    ">Le comportement block nous permets a utiliser un height,width et le margin vertical.\n",
     "2. Est-il possible de créer un site web responsive sans media queries ?\n",
-    ">\n",
+    ">Oui, il est possible de créer un site web responsive sans media queries, par exemple par utiliser les flex boxs.\n",
     "3. Expliquez les avantages/inconvénients de l'utilisation d'éléments `inline-block`, `flex` ou `float`.\n",
-    ">"
+    ">Parmis les avantages de `inline-block` est de pouvoir disposer des éléments les uns à côté des autres. les inconvénients sont est l'apparition d'un espace indésirable et incompressible de prime abord entre les bloc.\n",
+    ">Parmis les avantages de `flex` est de définir les règles d’alignement et de mise en forme de vos éléments à l’intérieur d'une boîte et polyvalent et peut être utilisé pour créer des designs complexes.\n",
+    ">`float` retiré un élément du flux normal et doit être placé sur le côté droit ou sur le côté gauche ou pas du tout au sein de son conteneur"
    ]
   },
   {
@@ -162,9 +167,30 @@
     "    1. A la place de chaque nombre qui peut être divisé par 3, le programme imprimera Dev.\n",
     "    2. A la place de chaque nombre divisible par 5, le programme imprimera Ops.\n",
     "    3. A la place de chaque nombre divisible par 3 et 5, le programme imprimera DevOps.\n",
-    "    >\n",
+    "```\n",
+    "<?php\n",
+    "for ($i = 1; $i <= 100; $i++) {\n",
+    "  if($i % 3 == 0){ \n",
+    "  \techo \"Number: \",$i,\" Dev \\n\"; \n",
+    "  }\n",
+    "  if($i % 5 == 0){ \n",
+    "  \techo \"Number: \",$i,\" Ops \\n\"; \n",
+    "  }\n",
+    "  if($i % 3 == 0 && $i % 5 == 0){ \n",
+    "  \techo \"Number: \",$i,\" DevOps \\n\"; \n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "```\n",
+    "\n",
     "2. Ecrire une fonction qui vérifie si paramètre est en fait un nombre premier. \n",
     "`echo isPrime(73) ? 'Prime' : 'Composite';`\n",
+    "function writeMsg($number) {\n",
+    "\tif($number % 2 == 0){\n",
+    "     echo $number , \" Composite\";\n",
+    "\t}\n",
+    "\telse echo $number , \" Primer\";\n",
+    "}\n",
     ">\n",
     "3. Que signifie\n",
     "```\n",
@@ -175,7 +201,7 @@
     "        endforeach;\n",
     "        print_r($array);\n",
     "```\n",
-    ">"
+    "> Création d'un array et faire une boucle sur ce array, si la valeur est positive stocké la au variable $item sinon faire la puissance à 2 pour $item et lui stocké sur $item. aprés afficher le array.\n"
    ]
   },
   {
@@ -193,12 +219,19 @@
    "source": [
     "Pour la table employee ci-dessous `(voir employee.sql)`\n",
     "   1. extraire le nombre d'employés par jour s'étant inscrit \n",
+    "   > SELECT Count(*) as 'Nombre employé' From employee Group By create_at\n",
     "   2. extraire les employés ayant fait l'inscription le `3/10/2021`\n",
+    "   > SELECT first_name,last_name From employee Where create_at = '2021-10-03'\n",
     "   3. extraire les employés ayant un email qui commence par `consonne` et qui a un chiffre avant le `@`\n",
+    "   > SELECT * From emplyee where email Like 'consonne%[0-9]@%'\n",
     "   4. mettre first_name et last_name en `lowercase`\n",
+    "   > SELECT LOWER(first_name),LOWER(last_name) FROM employee\n",
     "   5. modifier la column `create_at` par `date_creation`\n",
+    "   > ALTER TABLE employee RENAME COLUMN create_at TO date_creation;\n",
     "   6. c'est quoi la differnce entre `delete` et `truncate`\n",
-    "   7. imprimer la liste des employés qui ont un salaire plus que la somme de deux salaires minimum"
+    "   > `delete` pour supprimer une ligne spécifique, `truncate` pour supprimer toute les lignes du table.\n",
+    "   7. imprimer la liste des employés qui ont un salaire plus que la somme de deux salaires minimum\n",
+    "   > SELECT * from employee Where salaire > sum(min(salaire),min(salaire)) Group By salaire"
    ]
   },
   {
