compress folder web page

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -290,7 +290,8 @@
    "metadata": {},
    "source": [
     "- Créer une page web sur la base du design (voir le fichier `web.xd`)\n",
-    "- En ouvrant les collapses, chaque point se déplace vers son paragraphe "
+    "- En ouvrant les collapses, chaque point se déplace vers son paragraphe \n",
+    "> https://github.com/youssefsakini/webpage-iwaco.git"
    ]
   },
   {
